--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.11.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.20.0",
+    "handlebars": "^4.7.6",
+    "jquery": "^3.5.1"
+  }
 }
